<resources>
    <string name="app_name">Rumah Sakit Kembali</string>
    <string name="inputsometext">Input some text</string>
    <string name="clickme">Click Me</string>
    <string name="second_fragment_text">second fragment text</string>
    <string name="home">home</string>
    <string name="page2">page2</string>
    <string name="exit">exit</string>
    <string name="right_drawer">This is Right Drawer</string>
    <string name="openDrawer">null</string>
    <string name="closeDrawer">null</string>
    <string name="rumah_sakit_cepat_kembali_siap_melayani_mu">Rumah Sakit Cepat Kembali Siap Melayani-mu</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <string name="masukkan_nama_pasien">Masukkan Nama Pasien</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_dokter">Masukkan Nama Dokter</string>
    <string name="keluhan">Keluhan</string>
    <string name="masukkan_keluhan">Masukkan Keluhan</string>
    <string name="tanggal">Tanggal</string>
    <string name="pilh_tanggal">Pilh Tanggal</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="hubungi">Hubungi</string>
    <string name="rs_cepat_kembali">RS CEPAT KEMBALI</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="plus">PLUS</string>
    <string name="cancel">CANCEL</string>
    <string name="daftar_dokter">Daftar Dokter</string>
    <string name="buat_pertemuan">Buat Pertemuan</string>
    <string name="tambah_dokter">TAMBAH DOKTER</string>
    <string name="pertemuan_anda">Pertemuan anda</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="bidang">Bidang</string>
    <string name="masukkan_bidang_dokter">Masukkan Bidang Dokter</string>
    <string name="no_hp">No Hp</string>
    <string name="masukkan_np_hp_dokter">Masukkan Np Hp Dokter</string>
    <string name="simpan">SIMPAN</string>
    <string name="dokter">Dokter</string>
    <string name="waktu">Waktu</string>
    <string name="pengaturan2">PENGATURAN</string>
    <string name="pilih_tema">Pilih Tema</string>
    <string name="rumah_sakit_terbaik">Rumah Sakit Terbaik</string>
    <string name="pertemuan">PERTEMUAN</string>
    <string name="edit_dokter">EDIT DOKTER</string>
    <string name="masukkan_nama2">Masukkan Nama</string>
    <string name="bidang2">Bidang</string>
    <string name="masukkan_bidang_dokter2">Masukkan Bidang Dokter</string>
    <string name="no_hp2">No Hp</string>
    <string name="masukkan_no_hp_dokter">Masukkan No Hp Dokter</string>
    <string name="simpan2">SIMPAN</string>
    <string name="title">title</string>


    <string-array name="array_language">
        <item>Indonesia</item>
        <item>English</item>
    </string-array>

    <string-array name="array_theme">
        <item>Day Mode</item>
        <item>Night Mode</item>
    </string-array>

    <string-array name="array_doctor">
        <item>Dr Budi</item>
        <item>Dr Ridwan</item>
        <item>Dr Andri</item>
    </string-array>

</resources>